# discord-rss-bot

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: black.yaml  build-and-push-image.yaml  pypi.yaml  release.yaml
discord_rss_bot/: __main__.py  bot.py  message.py  models.py  rss_reader.py  utils.py
